--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,18 @@
+body{
+  background-color: #3949ad;
+  font-family: Helvetica, sans-serif;
+
+}
+ul{
+  list-style: none;
+
+}
+li{
+  font-size: 18px;
+  &.strike{
+    text-decoration: line-through;
+  }
+}
 h1{
   color: orange;
 }
