Продолжение изучения Vue.js

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ h1 {
   background: lightslategray;
   width: 500px;
   height: 500px;
-  margin-top: 50px; }
+  margin-top: 50px;
+  padding: 20px; }
 
 /*# sourceMappingURL=main.css.map */
